--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ cmake_minimum_required(VERSION 3.7.2)
 
 os_set_config_file(system_config.h)
 
+# set(KernelMaxNumNodes 2 CACHE STRING "" FORCE)
+
 #-------------------------------------------------------------------------------
 project(tests_multicore C)
 
@@ -16,13 +18,22 @@ DeclareCAmkESComponent(
     INCLUDES
         # no include paths needed
     SOURCES
-        components/multicore_app/src/main.c
+        components/multicore_app/main.c
     C_FLAGS
         -Wall
         -Werror
     LIBS
         os_core_api
+        lib_debug
         TimeServer_client
+)
+
+DeclareCAmkESComponent(
+    Server
+    SOURCES
+        components/server/server.c
+    LIBS
+        lib_debug
 )
 
 TimeServer_DeclareCAmkESComponent(
